set(srcs "SSD1306.c" "SH1106.c" "SSD132x.c" "SSD1306.c" "SSD1322.c" "SSD1675.c" "ST77xx.c"
	"core/gds.c"
	"core/gds_draw.c"
	"core/gds_font.c"
	"core/gds_image.c"
	"core/gds_text.c"
	"core/ifaces/default_if_i2c.c"
	"core/ifaces/default_if_spi.c"
	"fonts/font_droid_sans_fallback_11x13.c"
	"fonts/font_droid_sans_fallback_15x17.c"
	"fonts/font_droid_sans_fallback_24x28.c"
	"fonts/font_droid_sans_mono_13x24.c"
	"fonts/font_droid_sans_mono_16x31.c"
	"fonts/font_droid_sans_mono_7x13.c"
	"fonts/font_liberation_mono_13x21.c"
	"fonts/font_liberation_mono_17x30.c"
	"fonts/font_liberation_mono_9x15.c"
	"fonts/font_line_1.c"
	"fonts/font_line_2.c"
	"fonts/font_tarable7seg_16x32.c"
	"fonts/font_tarable7seg_32x64.c"
    )
idf_component_register( SRCS ${srcs}
			SRC_DIRS "core" "core/ifaces"
			INCLUDE_DIRS "core/")